--- a/blocks/form.css
+++ b/blocks/form.css
@@ -64,8 +64,8 @@
   color: white;
   width: 32px;
   height: 60px;
-  max-width: 385px;
-  width: 100%;
+  width: 385px;
+
   margin-bottom: 32px;
   font-family: "Inter", Arial, sans-serif;
   font-style: normal;
