--- a/blocks/about.css
+++ b/blocks/about.css
@@ -60,8 +60,8 @@
   max-width: 660px;
   color: white;
   margin-bottom: 20px;
+  margin-top: 0;
 }
 .about__paragraph:last-child {
   margin-bottom: 173px;
-  padding-bottom: 0;
 }
