--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -6,9 +6,9 @@
 .footer__content {
   display: flex;
   justify-content: space-between;
-  padding-top: 60px;
   margin-left: 80px;
   margin-right: 100px;
+  margin-top: 0;
 }
 .footer__logo {
   width: 116px;
@@ -33,8 +33,7 @@
   line-height: 20px;
   list-style: none;
 }
-.footer__list-item {
-}
+
 .footer__social-icon {
   height: 16px;
   width: 16px;
@@ -50,18 +49,17 @@
   color: white;
 }
 .footer__list-item:first-child {
-  padding-bottom: 16px;
+  margin-bottom: 16px;
 }
-.footer__social-media:last-child {
-}
+
 .footer__social-link:hover {
   color: #c1c1c1;
   text-decoration: none;
   transition-duration: 1.4s;
 }
 .footer__copyright {
-  margin: 0 80px 60px;
-  padding: 108px 80px 60px 0;
+  margin: 0;
+  padding: 108px 80px 60px;
   font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
