--- a/blocks/form.css
+++ b/blocks/form.css
@@ -1,30 +1,5 @@
-.reservation {
-  background-color: #d9e7ff;
-  background-image: url(../images/background_reservation.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-.reservation__title {
-  margin-top: 100px;
-  padding-top: 100px;
-  padding-bottom: 80px;
-  display: flex;
-  justify-content: center;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-.reservation__form {
-  display: flex;
-  flex-direction: column;
-  margin-left: auto;
-  margin-right: auto;
-}
 .form__fieldset {
-  padding-bottom: 8px;
+  padding: 0;
   border-style: none;
   text-align: start;
   display: flex;
@@ -53,7 +28,9 @@
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
-  color: #838383;
+  border: #838383 1px solid;
+  box-sizing: border-box;
+  padding-left: 20px;
 }
 
 .form__button {
@@ -79,7 +56,6 @@
   flex-direction: row;
   justify-content: center;
   padding-bottom: 120px;
-  padding-top: 32px;
 }
 .form__checkbox {
   margin-top: 0px;
