--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
 }
 .nav__links {
   list-style: none;
