--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,7 +1,7 @@
 .page {
   min-width: 1100px;
   max-width: 1600px;
-  font-family: "Arial", serif;
+  font-family: "Inter", Arial, serif;
   margin: 0 auto;
   font-size: 16px;
   line-height: 20px;
