--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -9,41 +9,42 @@
 }
 .recipes__title {
   max-width: 580px;
-  margin-top: 100px;
-  margin-left: 80px;
-  margin-bottom: 0;
+  margin: 0;
+  padding-bottom: 24px;
+  padding-left: 80px;
+  padding-top: 100px;
   font-family: "Inter", Arial, sans-serif;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
 }
 .recipes__subtitle {
-  max-width: 438px;
-  margin-left: 80px;
-  margin-top: 24px;
-  margin-bottom: 0;
+  margin: 0;
+  padding-left: 80px;
+  padding-bottom: 80px;
   font-family: "Noto Serif", "Times New Roman", serif;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
+  max-width: 438px;
 }
 .recipes__videos {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 80px;
+  margin-top: 0;
   margin-bottom: 215px;
+  gap: 40px;
 }
-.recipes__video {
-  margin-left: 0px;
-}
+
 .recipes__video:last-child {
   margin-left: 40px;
 }
-.recipe__iframe {
+.recipes__iframe {
   width: 480px;
   height: 273px;
   border: 0;
+  display: block;
 }
 .recipes__video-captions {
   display: flex;
